deploy/kellar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kellar-core-service
  namespace: default
  labels:
    app: kellar-core
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kellar-core
  template:
    metadata:
      labels:
        app: kellar-core
    spec:
      containers:
      - name: kellar-api
        image: credkellarboop/kellar-api:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "2"
            memory: "4Gi"
          requests:
            cpu: "500m"
            memory: "512Mi"
