deploy/kellar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kellar-ingress-gateway
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kellar.edge
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kellar-core-service
            port:
              number: 3000
